// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BoundingBoxSelection should match snapshot when isBoundingBoxSelectionInternal 1`] = `
<Connect
  actions={
    Object {
      "addSubValueToObject": [Function],
      "addToArray": [Function],
      "addToObject": [Function],
      "removeFromArray": [Function],
      "removeFromObject": [Function],
      "resetSelectedEdges": [Function],
      "resetSelectedNodes": [Function],
      "setStoreState": [Function],
    }
  }
  addToObject={[MockFunction]}
  isBoundingBoxSelectionInternal={true}
  mapToProps={[Function]}
  selectedBoundingBoxNodes={Array []}
  setStoreState={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`BoundingBoxSelection should match snapshot when isBoundingBoxSelectionInternal is false 1`] = `
<Connect
  actions={
    Object {
      "addSubValueToObject": [Function],
      "addToArray": [Function],
      "addToObject": [Function],
      "removeFromArray": [Function],
      "removeFromObject": [Function],
      "resetSelectedEdges": [Function],
      "resetSelectedNodes": [Function],
      "setStoreState": [Function],
    }
  }
  addToObject={[MockFunction]}
  isBoundingBoxSelectionInternal={false}
  mapToProps={[Function]}
  selectedBoundingBoxNodes={Array []}
  setStoreState={[MockFunction]}
>
  <Component />
</Connect>
`;
